[project]
name = "twitter-bookmark-kb"
version = "0.1.0"
description = "Local X/Twitter bookmark collector, classifier, knowledgebase, and Obsidian exporter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tweetkb = "tweetkb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tweetkb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
