[project]
name = "twitter-bookmark-kb"
version = "0.3.0"
description = "Local X/Twitter bookmark collector, classifier, knowledgebase, and Obsidian exporter."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff>=0.14"]

[project.scripts]
tweetkb = "tweetkb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tweetkb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E731"]
